# simple_cmake_tutorial

./: README.md  simple_cmake_tutorial.md  simple_cmake_tutorial_kr.md
1.Hello_World/: CMakeLists.txt  build.bat
2.add_subdirectory/: CMakeLists.txt
2.add_subdirectory/lib/: CMakeLists.txt
2.add_subdirectory/lib/dummy_inc/: dummy.h
3.CMake_Script_Along_With_Sources/: CMakeLists.txt
4.Basic_Control_Flow/: CMakeLists.txt  main.cpp
4.Basic_Control_Flow/lib/: CMakeLists.txt  mylib.cpp
5.Variable_and_Predefines/: CMakeLists.txt
5.Variable_and_Predefines/lib/: CMakeLists.txt  mylib.cpp
6.Private_Public_include_path/: CMakeLists.txt
6.Private_Public_include_path/lib/: CMakeLists.txt  mylib.cpp  private_std_short.h
7.Function_Macro/: CMakeLists.txt  build.bat
8.include_CMakefile/: CMakeLists.txt  utils.cmake
8.include_CMakefile/lib/: CMakeLists.txt
8.include_CMakefile/lib/include/: mylib.h
9.Variable_Cache_and_Precedence/: CMakeLists.txt  build.bat  build_with_cmd_line.bat  build_with_env_var.bat  config.cmake  predefine_variables.h.in
9.Variable_Cache_and_Precedence/build_with_cmd_line/: ALL_BUILD.vcxproj  CMakeCache.txt  VariablePrecedenceExample.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  my_app.vcxproj  my_app.vcxproj.filters  predefine_variables.h
9.Variable_Cache_and_Precedence/build_with_cmd_line/lib/: cmake_install.cmake  mylib.vcxproj  mylib.vcxproj.filters
9.Variable_Cache_and_Precedence/build_with_cmd_line/lib/Debug/: mylib.lib
9.Variable_Cache_and_Precedence/build_with_cmd_line/lib/mylib.dir/Debug/mylib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  mylib.lastbuildstate
9.Variable_Cache_and_Precedence/build_with_cmd_line/my_app.dir/Debug/: my_app.exe.recipe  my_app.ilk
9.Variable_Cache_and_Precedence/build_with_cmd_line/my_app.dir/Debug/my_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
9.Variable_Cache_and_Precedence/build_with_cmd_line/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
9.Variable_Cache_and_Precedence/build_with_cmd_line/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
9.Variable_Cache_and_Precedence/build_with_cmd_line/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
9.Variable_Cache_and_Precedence/build_with_cmd_line/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
9.Variable_Cache_and_Precedence/build_with_env_var/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  VariablePrecedenceExample.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  my_app.vcxproj  my_app.vcxproj.filters  predefine_variables.h
9.Variable_Cache_and_Precedence/build_with_env_var/lib/: cmake_install.cmake  mylib.vcxproj  mylib.vcxproj.filters
9.Variable_Cache_and_Precedence/build_with_env_var/lib/Debug/: mylib.lib
9.Variable_Cache_and_Precedence/build_with_env_var/lib/mylib.dir/Debug/mylib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  mylib.lastbuildstate
9.Variable_Cache_and_Precedence/build_with_env_var/my_app.dir/Debug/: my_app.exe.recipe  my_app.ilk
9.Variable_Cache_and_Precedence/build_with_env_var/my_app.dir/Debug/my_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
9.Variable_Cache_and_Precedence/build_with_env_var/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
9.Variable_Cache_and_Precedence/build_with_env_var/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
9.Variable_Cache_and_Precedence/build_with_env_var/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
9.Variable_Cache_and_Precedence/build_with_env_var/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
9.Variable_Cache_and_Precedence/lib/: CMakeLists.txt
